1. added RiV Mesh changes

--- a/example-singleServer-full.html
+++ b/example-singleServer-full.html
@@ -273,10 +273,10 @@ function initUI(){
 		}
 	}
 </style>
-<title>LibreSpeed Example</title>
+<title>LibreSpeed RiV Mesh</title>
 </head>
 <body>
-<h1>LibreSpeed Example</h1>
+<h1>Speedtest</h1>
 <div id="testWrapper">
 	<div id="startStopBtn" onclick="startStop()"></div><br/>
 	<a class="privacy" href="#" onclick="I('privacyPolicy').style.display=''">Privacy</a>
